# pycon-uk-2019-fastapi

./: README.rst  presentation.css  presentation.rst  pyproject.toml
docs/: index.html  presentation.css
