[tool.poetry]
name = "pycon-uk-2019-fastapi"
version = "0.1.0"
description = ""
authors = ["Chris Withers <chris@withers.org>"]

[tool.poetry.dependencies]
python = "^3.7"
hovercraft = "^2.6"
httpx = "^0.7.2"
fastapi = "^0.38.1"
requests = "^2.22"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
